the output now includes the suitabiity raster as modified by the probabilistic
conversion
* MAJOR CHANGE: the function convertToPA now includes a linear method for the
probabilistic conversion
* Added a series of messages when running generateSpFromFun to inform users about
the default behaviour of the function (i.e., it rescales all responses between 0 
and 1 by default).



virtualspecies v1.4-5 (Release date: 2018-10-08)
==============

Changes:

* Fixed several typos
* Added occurrence type in sampleOccurrences
* Improved print generic for sampleOccurrences outputs

virtualspecies v1.4-4 (Release date: 2018-09-10)
==============

Changes:

* Modified function sampleOccurrences (more features, better output)
* Added new generic print / str functions for sampleOccurrences outputs
* Improvements to generateSpFromBCA()
* Fixed a bug in convertToPA() where the generation of low prevalence species would generate warnings and sometimes fail to obtain a proper beta threshold

virtualspecies v1.4-1 (Release date: 2016-12-22)
==============

Changes:

* Added the possibility to use a raster of habitat patches in limitDistributions()
* Added the long overdue compatibility with new CRAN policies of imports/dependencies
* Updated and fixed generateSpFromBCA()
* Added NEWS file

virtualspecies v1.4 (Release date: 2016-11-07)
==============

Changes:

* Included the ability to choose any axis for the generateSpFromPCA approach
* Updated all the other functions accordingly
* Minor fixes

virtualspecies v1.3-4 (Release date: 2016-06-27)
==============

Changes:

* Fixed an issue with generateRandomSp() that caused compatibility problems with other functions
* Minor fix to convertToPA() to better adjust the results to desired prevalence


virtualspecies v1.3-3 (Release date: 2016-02-19)
==============

Changes:

* Fixed a bug in convertToPA & limitDistribution with raster detection


virtualspecies v1.3-2 (Release date: 2016-09-30)
==============

Changes:
